--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+#sak{
+    clip-path:polygon(0% 0%, 25% 25%, 75% 25%, 75% 75%, 25% 75%,25% 25%, 0% 0%, 0% 100%, 100% 100%, 100% 0%);
+    height:100px;
+    width:100px;
+    background-color: red;
+}
