--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-#sak{
+.sak{
     clip-path:polygon(0% 0%, 25% 25%, 75% 25%, 75% 75%, 25% 75%,25% 25%, 0% 0%, 0% 100%, 100% 100%, 100% 0%);
     height:100px;
     width:100px;
